Disable ServiceWorker when JS is disabled

This patch restricts the service worker when JavaScript is disabled by checking
the settings in ChromeContentBrowserClient::AllowServiceWorker().

BUG=632823

Review-Url: https://codereview.chromium.org/2377603002
Cr-Commit-Position: refs/heads/master@{#423745}

Former-commit-id: ce8af8812b8de0246975c932063b1e03ed570068